# personal-os-agent

./: .gitignore  README.md  docker-compose.yml  index.html  operateLog.md  package.json  pnpm-lock.yaml
clients/mu-music/: .gitignore  README.md  pubspec.yaml
clients/mu-music/lib/: main.dart
clients/mu-music/web/: index.html  manifest.json
data/: README.md
data/secrets/: agent-server.env.example  daoliyu.env.example  music-sources.env.example
docs/superpowers/specs/: 2026-06-29-full-implementation-roadmap.md  2026-06-29-personal-os-agent-design.md  2026-06-29-personal-os-agent-implementation-plan.md  2026-06-29-real-usable-mvp-v1.md  2026-06-29-step-01-mvp-baseline-plan.md  2026-06-29-step-02-chat-to-memory-candidate-plan.md  2026-06-29-step-03-memory-candidate-review-plan.md  2026-06-29-step-04-memory-list-plan.md  2026-06-29-step-05-memory-management-plan.md  2026-06-29-step-06-memory-search-filter-plan.md  2026-06-29-step-07-agent-memory-retrieval-plan.md  2026-06-29-step-08-knowledge-crud-plan.md  2026-06-29-step-09-agent-knowledge-retrieval-plan.md  2026-06-29-step-10-real-chat-model-foundation-plan.md  2026-06-29-step-11-chat-persistence-plan.md  2026-06-29-step-12-chat-driven-memory-candidates-plan.md  2026-06-29-step-13-chat-session-management-plan.md  2026-06-29-step-14-chat-history-memory-mining-plan.md  (+125 more)
memory/: 2026-07-07-dj-playback-debug.md
services/agent-server/: Dockerfile  README.md  requirements.txt
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src/lib/: backend.ts
(+51 files in other folders)
